[package]
name = "signed_tokens"
version = "0.2.0"
authors = ["Dave Stearns"]
edition = "2021"
license = "MIT"
description = "Creates and verifies digitally-signed tokens suitable for authenticated session IDs."
repository = "https://github.com/davestearns/signed-tokens"
keywords = ["sessions", "tokens", "signatures"]

[dependencies]
base64 = "0.22.1"
fastrand = "2.1.0"
hmac = "0.12.1"
sha2 = "0.10.8"
thiserror = "1.0.61"
